[gd_scene format=4 uid="uid://sx0awbrt80do"]

[ext_resource type="Script" uid="uid://df8ju7w5cv70a" path="res://entities/lift/elevator.gd" id="1_7domg"]
[ext_resource type="ArrayMesh" uid="uid://db06wgsusvb11" path="res://assets/meshes/elevator/elevatorA.res" id="1_uum4n"]
[ext_resource type="Material" uid="uid://bfsolfawxp1d" path="res://shaders/materials/metal_plate.material" id="2_2kajr"]
[ext_resource type="ArrayMesh" uid="uid://b03nmcy1lvb4o" path="res://assets/meshes/elevator/elevatorB.res" id="2_7bj7x"]
[ext_resource type="Texture2D" uid="uid://dul3miw6a5fe" path="res://assets/textures/rusty_metal/rusty_metal_04_diff_1k.png" id="3_2kajr"]
[ext_resource type="Texture2D" uid="uid://c1b7taomq7qcy" path="res://assets/textures/rusty_metal/rusty_metal_04_nor_gl_1k.png" id="4_hjp0w"]
[ext_resource type="Texture2D" uid="uid://bjux7arjvjr2i" path="res://assets/textures/rusty_metal/rusty_metal_04_arm_1k.png" id="5_7domg"]
[ext_resource type="Animation" uid="uid://3wu6b7rygh7f" path="res://assets/meshes/elevator/animations/CubeAction.res" id="6_t3e4p"]
[ext_resource type="PackedScene" uid="uid://56rt610we0mn" path="res://systems/interaction/is_selectable.tscn" id="10_hjp0w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e5d6t"]
size = Vector3(2, 3.5400634, 0.11203756)

[sub_resource type="BoxShape3D" id="BoxShape3D_o3x5t"]
size = Vector3(2.3291016, 0.28930664, 2.126831)

[sub_resource type="BoxShape3D" id="BoxShape3D_qosab"]
size = Vector3(2.3291016, 1.2539825, 2.2275696)

[sub_resource type="BoxShape3D" id="BoxShape3D_ev218"]
size = Vector3(0.15, 3.139844, 2.126831)

[sub_resource type="BoxShape3D" id="BoxShape3D_y3efi"]
size = Vector3(0.41026002, 3.2656434, 0.3834076)

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_815yl"]
albedo_color = Color(0.9976477, 0.8693556, 0.90070444, 1)
albedo_texture = ExtResource("3_2kajr")
orm_texture = ExtResource("5_7domg")
normal_enabled = true
normal_texture = ExtResource("4_hjp0w")
texture_filter = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ogq3x"]

[sub_resource type="ArrayMesh" id="ArrayMesh_s8oyp"]
_surfaces = [{
"aabb": AABB(-1, -2.5400634, -0.05601878, 2, 3.5400634, 0.11203756),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_o8crl"]
resource_name = "elevator_Cube"
_surfaces = [{
"aabb": AABB(-1, -2.5400634, -0.05601878, 2, 3.5400634, 0.11203756),
"attribute_data": PackedByteArray("8nv//wyEAADyewAADIT//683//9PyAAArzcAAE/I//8MhP//8nsAAAyEAADye///T8j//683AABPyAAArzf//6838ntPyAyET8jye683DIRPyPJ7rzcMhK838ntPyAyE"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_ogq3x"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAAAAAAAAAAAAP////8AAAAAAAD//wAAAAD//wAAAAAAAP//AAAAAP+//////////7//////AAD/v///AAD///+///8AAP//AIAAAP////8AgP///////wCAAAAAAP//AIAAAAAAAAD/P///AAD///8///8AAAAA/z8AAAAA////P/////8AAP+/AAD//////78AAP//AAD/v/////////+//z//f/8//3//P/9//z//f////3////9/////f////3//fwAA/38AAP9/AAD/fwAA/3////9/////f////3///wAA/38AAP9/AAD/fwAA/3////9/////f////3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_s8oyp")

[sub_resource type="Animation" id="Animation_uum4n"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.5400634, 0.90287614)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D/DoorCollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80kln"]
_data = {
&"OpenDoor": ExtResource("6_t3e4p"),
&"RESET": SubResource("Animation_uum4n")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_7domg"]
size = Vector3(2.0686035, 3.5996094, 0.97546387)

[sub_resource type="ArrayMesh" id="ArrayMesh_2kajr"]
_surfaces = [{
"aabb": AABB(-0.98724365, -0.5, -1.125, 1.9744873, 1, 2.25),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"material": ExtResource("2_2kajr"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("ALx8vwAAAL8AAJA/ALx8vwAAAL8AAJC/ALx8vwAAAD8AAJC/ALx8PwAAAL8AAJC/ALx8vwAAAL8AAJC/ALx8vwAAAL8AAJA/ALx8vwAAAD8AAJC/ALx8vwAAAL8AAJC/ALx8PwAAAL8AAJC/ALx8vwAAAD8AAJC/ALx8vwAAAD8AAJA/ALx8vwAAAL8AAJA/ALx8vwAAAL8AAJA/ALx8vwAAAD8AAJA/ALx8PwAAAD8AAJA/ALx8PwAAAD8AAJA/ALx8vwAAAD8AAJA/ALx8vwAAAD8AAJC/ALx8vwAAAL8AAJA/ALx8PwAAAL8AAJA/ALx8PwAAAL8AAJC/ALx8PwAAAD8AAJA/ALx8PwAAAL8AAJA/ALx8vwAAAL8AAJA/ALx8PwAAAL8AAJC/ALx8PwAAAL8AAJA/ALx8PwAAAD8AAJA/ALx8PwAAAL8AAJC/ALx8PwAAAD8AAJC/ALx8vwAAAD8AAJC/ALx8vwAAAD8AAJC/ALx8PwAAAD8AAJC/ALx8PwAAAD8AAJA/ALx8PwAAAD8AAJA/ALx8PwAAAD8AAJC/ALx8PwAAAL8AAJC/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_wvcom"]
size = Vector3(1.3857422, 3.0199432, 1.3190918)

[node name="Elevator" type="Node3D" unique_id=1038308039]
script = ExtResource("1_7domg")

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=1274944426]
collision_layer = 32
collision_mask = 0

[node name="DoorCollisionShape" type="CollisionShape3D" parent="StaticBody3D" unique_id=599805115]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7152827, 0.90287614)
visible = false
shape = SubResource("BoxShape3D_e5d6t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=1763698674]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.13464355, -0.062072754)
visible = false
shape = SubResource("BoxShape3D_o3x5t")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D" unique_id=1291670002]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.8963447, 0.02317202)
visible = false
shape = SubResource("BoxShape3D_qosab")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D" unique_id=466145795]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0895507, 1.4971484, -0.062072754)
visible = false
shape = SubResource("BoxShape3D_ev218")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D" unique_id=1265482665]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09, 1.7039219, -0.062)
visible = false
shape = SubResource("BoxShape3D_ev218")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D" unique_id=436999212]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.04, 1.6589999, -1.051)
visible = false
shape = SubResource("BoxShape3D_ev218")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="StaticBody3D" unique_id=2066038374]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -0.80181974, 1.6418216, 0.8030415)
visible = false
shape = SubResource("BoxShape3D_y3efi")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="StaticBody3D" unique_id=622633055]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -0.80181974, 1.6418216, -0.8040938)
visible = false
shape = SubResource("BoxShape3D_y3efi")

[node name="CollisionShape3D8" type="CollisionShape3D" parent="StaticBody3D" unique_id=1085269149]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.8056486, 1.6418216, -0.8040938)
visible = false
shape = SubResource("BoxShape3D_y3efi")

[node name="CollisionShape3D9" type="CollisionShape3D" parent="StaticBody3D" unique_id=722422838]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.8056486, 1.6418216, 0.7909046)
shape = SubResource("BoxShape3D_y3efi")

[node name="Plane" type="MeshInstance3D" parent="." unique_id=911868503]
material_override = ExtResource("2_2kajr")
mesh = ExtResource("1_uum4n")

[node name="Plane_001" type="MeshInstance3D" parent="." unique_id=1774484149]
material_override = SubResource("ORMMaterial3D_815yl")
mesh = ExtResource("2_7bj7x")

[node name="Cube" type="MeshInstance3D" parent="." unique_id=924446190]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5400634, 0.90287614)
material_override = SubResource("ORMMaterial3D_815yl")
mesh = SubResource("ArrayMesh_o8crl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2073695143]
libraries/ = SubResource("AnimationLibrary_80kln")

[node name="IsSelectable" parent="." unique_id=453905894 node_paths=PackedStringArray("target_mesh") instance=ExtResource("10_hjp0w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.93686295, 0.9044577)
secondary_interaction_name = "Close"
target_mesh = NodePath("../Roof")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IsSelectable" unique_id=3541184]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.86910987, -0.0853858)
shape = SubResource("BoxShape3D_7domg")
debug_color = Color(0, 0.5950001, 0.7, 0)

[node name="Roof" type="MeshInstance3D" parent="." unique_id=567303252]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.010681152, 3.9837422, 0.010551095)
mesh = SubResource("ArrayMesh_2kajr")

[node name="Area3D" type="Area3D" parent="." unique_id=60544338]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=370766267]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.068115234, 1.5997543, -0.1595459)
shape = SubResource("BoxShape3D_wvcom")
debug_color = Color(0.93749404, 0.14970613, 0.50750244, 0.41960785)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
